# git-appraise-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs
git-appraise/: Cargo.toml
git-appraise-server/: Cargo.toml
git-appraise-server/src/: main.rs  render.rs
git-appraise/src/: ci_status.rs  ci_statuses.rs  comment.rs  error.rs  lib.rs  refs.rs  repository.rs  request.rs  review.rs  reviews.rs
src/: analyses.rs  analysis.rs  ci_status.rs  ci_statuses.rs  comment.rs  comments.rs  error.rs  event.rs  events.rs  lib.in.rs  lib.rs  main.rs  refs.rs  repository.rs  request.rs  requests.rs  result.rs  review.rs  reviews.rs
