[package]
name = "git-appraise"
version = "0.3.0"
authors = ["Wim Looman <wim@nemo157.com>"]
description = "A rust port of the git-appraise library"

repository = "https://github.com/Nemo157/git-appraise-rs"

readme = "README.md"
keywords = ["git", "git-appraise"]

license = "MIT/Apache-2.0"

[dependencies]
git2 = "0.6.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
