[package]
name = "git-appraise-server"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[dependencies]
iron = "0.2.6"
pulldown-cmark = "0.0.5"
typemap = "*"

[dependencies.git-appraise]
path = "../git-appraise"
version = "*"

[dependencies.maud]
git = "https://github.com/lfairy/maud"

[dependencies.maud_macros]
git = "https://github.com/lfairy/maud"

[dependencies.router]
git = "https://github.com/iron/router"

[dependencies.persistent]
git = "https://github.com/iron/persistent"

[dependencies.logger]
git = "https://github.com/iron/logger"
