[package]
name = "git-appraise-server"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[dependencies]

git-appraise = { path = "../git-appraise" }

iron = "*"
router = { git = "https://github.com/iron/router" }
persistent = { git = "https://github.com/iron/persistent" }
logger = { git = "https://github.com/iron/logger" }
typemap = "*"

chrono = "*"
pulldown-cmark = "*"
maud-pulldown-cmark = "*"

maud = "*"
maud_macros = { git = "https://github.com/lfairy/maud" }
